test/neg/neg-memberof3.errc
offsetof returned a bogus result
